# alg_p_strc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SUMMARY.md  install.sh  katas.py  main.cpp  main.py
TMP/: CMakeLists.txt  math.hpp
TMP/test/: CMakeLists.txt
TMP/test/MathTestCase/: tst_tmptestcase.cpp
algorithms/: README.md  _output.py  _sort.py  etc.py  interpool.py  linalg.py  pnum.py  random.py  search.py  sort.py
algorithms/transform/: perspective.py
codewars/: README.md  driver.py  kata.py  katameta.py  meta.py  meta.yml
codewars/_4kyu/: factorial_tail.py  permutations.py  strip_comments.py
codewars/_5kyu/: date_validation.py  jumbled_string.py  kprimes.py  max_sub_array_sum.py
codewars/test/: katas_test.py  test_3kyu.py  test_4kyu.py  test_5kyu.py  test_6kyu.py
cuda/: CMakeLists.txt  main.cpp
linalg/: CMakeLists.txt  globconf.h  main.cpp
linalg/pymodule/: pylinalgmodule.cpp  pylinalgmodule.h  pymatrix.cpp  pymatrix.h  pysqmatrix.cpp  pysqmatrix.h  pyvector.cpp  pyvector.h
linalg/src/matrix/: _matrix.cpp  _matrix.h  _sqmatrix.cpp  _sqmatrix.h
linalg/src/tensor/: _tensor.cpp  _tensor.h
linalg/src/vector/: _vector.cpp  _vector.h
modules/: _decor.py  _pnum.py  _random.py  _search.py  _sort.py
output/: atkinSieve.md  eratSieve.html
patterns/: CMakeLists.txt  notifyer.cpp  notifyer.h  observer.cpp  observer.h  patterns.cbp
quick_sort/: main.cpp
structs/: CMakeLists.txt  list.hpp  queue.hpp  queue.tpp  stack.hpp  tree.hpp
structs/node/: _node_dll.hpp
structs/src/node/: _node.hpp  _node_dl.hpp
structs/src/templates/: list.hpp  tree.hpp
structs/templates/: graph.hpp  queue.hpp  stack.hpp  tree.hpp
structs/test/: CMakeLists.txt
structs/unittest/: tst_teststack.cpp
structs/utils/: _node_dl.hpp  _node_dl.tpp  _node_dll.hpp  _node_dll.tpp  _node_dlxx.hpp  _node_kdll.hpp  _node_kdlxx.hpp  _node_kdlxx.tpp
test/py/: katas_test.py
unittest/: CMakeLists.txt  main.cpp  tst_testgraph.cpp  tst_testlist.cpp  tst_testqueue.cpp  tst_teststack.cpp
